# teams-bot

./: .deployment  .env.example  .env.template  .env.test  .gitignore  Dockerfile.dev  ENHANCEMENT_SUMMARY.md  LICENSE  Makefile  README.md  app.py  app_debug_old.py  app_minimal.py  app_original.py  azure-deploy.json  azure-deploy.parameters.json  demo_bot.py  deploy_infra.sh  docker-compose.yml  my_bot.py  package.json  pyproject.toml  requirements.txt  startup.sh  teams-productivity-bot-publish-profile.xml  test_deploy.sh  wsgi.py
.github/workflows/: deploy.yml
infra/: main.tf  outputs.tf  terraform.tfvars  variables.tf
scripts/: azure_diagnostics.py  check_azure_logs.py  check_deployment.py  deploy-azure.sh  monitor_deployment.py  test_bot_endpoint.py  test_bot_locally.py  troubleshoot_bot.py  upload_manifest.py
teams_app/: README.md  mainfest.json  manifest.json
tests/: test_bot.py
